k8s/laravel-deployment.yaml
---
# Laravel Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laravel-app
  namespace: kanarazu-katsu
spec:
  replicas: 2
  selector:
    matchLabels:
      app: laravel
  template:
    metadata:
      labels:
        app: laravel
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: laravel
          image: zaganjade/laravel-hackathon:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
---
# Laravel Service
apiVersion: v1
kind: Service
metadata:
  name: laravel-service
  namespace: kanarazu-katsu
spec:
  type: NodePort
  selector:
    app: laravel
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30007
---
# Laravel Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: laravel-ingress
  namespace: kanarazu-katsu
spec:
  rules:
    - host: kanarazu-katsu.hackathon.sev-2.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: laravel-service
                port:
                  number: 80
